# mecajato

./: manage.py  pyproject.toml
mecajato/: settings.py  urls.py
mecajato/clientes/: admin.py  apps.py  models.py  urls.py  views.py
mecajato/clientes/migrations/: 0001_initial.py
mecajato/clientes/templates/: clientes.html
mecajato/docs/: hot-tips.md
mecajato/servicos/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py
mecajato/servicos/migrations/: 0001_initial.py
mecajato/templates/: base.html
mecajato/templates/static/clientes/js/: clientes.js
